# solidity2riscv

./: Cargo.toml  LICENSE  README.md
.cursor/: rules.mdc
src/: lib.rs  main.rs  main_test.rs
src/backend/: mod.rs  riscv.rs
src/frontend/: lexer.rs  lexer_test.rs  mod.rs  parser.rs  parser_test.rs
src/ir/: mod.rs
tests/: test.s  test.sol
